--- a/portfolio.html
+++ b/portfolio.html
@@ -3,85 +3,126 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="css/styles.css" />
 </head>
 
 <body>
-    <header>
-        <a href="">WebStudio</a>
+    <header class="header ">
+        <a href=" " class="logo ">
+            <span class="web ">Web</span><span class="studio ">Studio</span>
+        </a>
         <nav>
-            <a href="index.html">Студия</a>
-            <a href="portfolio.html">Портфолио </a>
-            <a href="">Контакты</a>
+            <ul class="menu ">
+                <li class="studia "><a href="index.html ">Студия</a></li>
+                <li class="portfolio "><a href="portfolio.html ">Портфолио </a></li>
+                <li class="contacts "><a href=" ">Контакты</a></li>
+            </ul>
         </nav>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <a href="mailto:info@devstudio.com " class="mail ">info@devstudio.com</a>
+        <a href="tel:+380961111111 " class="phone">+38 096 111 11 11</a>
     </header>
     <main>
-        <div class="buttons-group">
-            <button type="button">Все</button>
-            <button type="button">Веб-сайты</button>
-            <button type="button">Приложения</button>
-            <button type="button">Дизайн</button>
-            <button type="button">Маркетинг</button>
-        </div>
-        <div class="block-images">
-            <div>
-                <img src="images/1.1.jpg" alt="Технокряк">
-                <p>Технокряк</p>
-                <p>Веб-сайт</p>
-            </div>
-            <div>
-                <img src="images/2.2.jpg" alt="Постер New Orlean vs Golden Star">
-                <p>Постер New Orlean vs Golden Star</p>
-                <p>Дизайн</p>
-            </div>
-            <div>
-                <img src="images/3.3.jpg" alt="Ресторан Seafood">
-                <p>Ресторан Seafood</p>
-                <p>Приложение</p>
-            </div>
-            <div>
-                <img src="images/4.4.jpg" alt="headphone">
-                <p>Проект Prime</p>
-                <p>Маркетинг</p>
-            </div>
-            <div>
-                <img src="images/5.5.jpg" alt="Boxes">
-                <p>Проект Boxes</p>
-                <p>Приложение</p>
-            </div>
-            <div>
-                <img src="images/6.6.jpg" alt="Web site on the monitor">
-                <p>Inspiration has no Borders</p>
-                <p>Веб-сайт</p>
-            </div>
-            <div>
-                <img src="images/7.7.jpg" alt="Megazine">
-                <p>Издание Limited Edition</p>
-                <p>Дизайн</p>
-            </div>
-            <div>
-                <img src="images/8.8.jpg" alt="tag">
-                <p>Проект LAB</p>
-                <p>Маркетинг</p>
-            </div>
-            <div>
-                <img src="images/9.9.jpg" alt="laptop">
-                <p>Growing Business</p>
-                <p>Приложение</p>
-            </div>
-        </div>
+        <section>
+            <ul class="buttons ">
+                <li class="button-box-all "><button type="button " class="all ">Все</button></li>
+                <li class="button-box-website "><button type="button " class="website ">Веб-сайты</button></li>
+                <li class="button-box-apps "><button type="button " class="apps ">Приложения</button></li>
+                <li class="button-box-design "><button type="button " class="design ">Дизайн</button></li>
+                <li class="button-box-marketing "><button type="button " class="marketing ">Маркетинг</button></li>
+            </ul>
+        </section>
+        <section class="image ">
+            <ul class="images-box ">
+                <li class="box ">
+                    <img src="images/1.1.jpg " alt="Технокряк " class="images " />
+                    <figure>
+                        <h3 class="for-h3 ">Технокряк</h3>
+                        <p class="for-p ">Веб-сайт</p>
+                    </figure>
+                </li>
+                <li class="box ">
+                    <img src="images/2.2.jpg " alt="Постер New Orlean vs Golden Star " class="images " />
+                    <figure>
+                        <h3 class="for-h3 ">Постер New Orlean vs Golden Star</h3>
+                        <p class="for-p ">Дизайн</p>
+                    </figure>
+                </li>
+                <li class="box">
+                    <img src="images/3.3.jpg " alt="Ресторан Seafood " class="images " />
+                    <figure>
+                        <h3 class="for-h3 ">Ресторан Seafood</h3>
+                        <p class="for-p ">Приложение</p>
+                    </figure>
+                </li>
+            </ul>
+            <ul class="images-box">
+                <li class="box ">
+                    <img src="images/4.4.jpg " alt="headphone " class="images " />
+                    <figure>
+                        <h3 class="for-h3 ">Проект Prime</h3>
+                        <p class="for-p ">Маркетинг</p>
+                    </figure>
+                </li>
+                <li class="box">
+                    <img src="images/5.5.jpg " alt="Boxes " class="images " />
+                    <figure>
+                        <h3 class="for-h3 ">Проект Boxes</h3>
+                        <p class="for-p ">Приложение</p>
+                    </figure>
+                </li>
+                <li class="box">
+                    <img src="images/6.6.jpg " alt="Web site on the monitor " class="images " />
+                    <figure>
+                        <h3 class="for-h3 ">Inspiration has no Borders</h3>
+                        <p class="for-p "> Веб-сайт</p>
+                    </figure>
+            </ul>
+            <ul class="images-box ">
+                </li>
+                <li class="box">
+                    <img src="images/7.7.jpg " alt="Megazine " class="images " />
+                    <figure>
+                        <h3 class="for-h3 ">Издание Limited Edition</h3>
+                        <p class="for-p ">Дизайн</p>
+                    </figure>
+                </li>
+                <li class="box">
+                    <img src="images/8.8.jpg " alt="tag " class="images " />
+                    <figure>
+                        <h3 class="for-h3 ">Проект LAB</h3>
+                        <p class="for-p ">Маркетинг</p>
+                    </figure>
+                </li>
+                <li class="box">
+                    <img src="images/9.9.jpg " alt="laptop " class="images " />
+                    <figure>
+                        <h3 class="for-h3 ">Growing Business</h3>
+                        <p class="for-p ">Приложение</p>
+                    </figure>
+                </li>
+            </ul>
+
+        </section>
     </main>
-    <footer>
-        <a href="">WebStudio</a>
-        <address>г. Киев, пр-т Леси Украинки, 26</address>
-        <a href="mailto:info@example.com">info@example.com</a>
-        <a href="tel:+380991111111">+38 099 111 11 11</a>
+    <footer class="footer ">
+        <a href=" " class="logo ">
+            <span class="web ">Web</span><span class="studio-2 ">Studio</span>
+        </a>
+        <ul class="address ">
+            <li>
+                <address class="adres">г. Киев, пр-т Леси Украинки, 26</address>
+            </li>
+            <li>
+                <a href="mailto:info@example.com " class="mulo">info@example.com </a>
+            </li>
+            <li>
+                <a href="tel:+380991111111 " class="tel">+38 099 111 11 11</a>
+            </li>
+        </ul>
     </footer>
 </body>
 
