--- a/portfolio.html
+++ b/portfolio.html
@@ -8,121 +8,99 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <header class="header ">
-        <a href=" " class="logo ">
-            <span class="web ">Web</span><span class="studio ">Studio</span>
+    <header class="header-portfolio">
+        <a href=" " class="logo-portfolio">
+            <span class="web-portfolio ">Web</span><span class="studio-portfolio ">Studio</span>
         </a>
         <nav>
             <ul class="menu ">
-                <li class="studia "><a href="index.html ">Студия</a></li>
-                <li class="portfolio "><a href="portfolio.html ">Портфолио </a></li>
-                <li class="contacts "><a href=" ">Контакты</a></li>
+                <li><a href="index.html " class="studia-portfolio ">Студия</a></li>
+                <li><a href="portfolio.html " class="portfolio-2 ">Портфолио </a></li>
+                <li><a href=" " class="contacts-portfolio ">Контакты</a></li>
             </ul>
         </nav>
-        <a href="mailto:info@devstudio.com " class="mail ">info@devstudio.com</a>
-        <a href="tel:+380961111111 " class="phone">+38 096 111 11 11</a>
+        <a href="mailto:info@devstudio.com " class="mail-portfolio">info@devstudio.com</a>
+        <a href="tel:+380961111111 " class="phone-portfolio">+38 096 111 11 11</a>
     </header>
     <main>
         <section>
-            <ul class="buttons ">
-                <li class="button-box-all "><button type="button " class="all ">Все</button></li>
-                <li class="button-box-website "><button type="button " class="website ">Веб-сайты</button></li>
-                <li class="button-box-apps "><button type="button " class="apps ">Приложения</button></li>
-                <li class="button-box-design "><button type="button " class="design ">Дизайн</button></li>
-                <li class="button-box-marketing "><button type="button " class="marketing ">Маркетинг</button></li>
+            <ul class="buttons">
+                <li><button type="button " class="all "><span class="text-for-all"> Все</span></button></li>
+                <li><button type="button " class="website "><span class="text-for-button">Веб-сайты</span> </button></li>
+                <li><button type="button " class="apps "><span class="text-for-button">Приложения</span> </button></li>
+                <li><button type="button " class="design "><span class="text-for-button">Дизайн</span> </button></li>
+                <li><button type="button " class="marketing "><span class="text-for-button">Маркетинг</span> </button></li>
             </ul>
         </section>
-        <section class="image ">
+        <section>
             <ul class="images-box ">
-                <li class="box ">
-                    <img src="images/1.1.jpg " alt="Технокряк " class="images " />
-                    <figure>
-                        <h3 class="for-h3 ">Технокряк</h3>
-                        <p class="for-p ">Веб-сайт</p>
-                    </figure>
-                </li>
-                <li class="box ">
-                    <img src="images/2.2.jpg " alt="Постер New Orlean vs Golden Star " class="images " />
-                    <figure>
-                        <h3 class="for-h3 ">Постер New Orlean vs Golden Star</h3>
-                        <p class="for-p ">Дизайн</p>
-                    </figure>
+                <li class="box">
+                    <img src="images/1.1.jpg " alt="Технокряк" width="370" height="294" />
+                    <h3 class="for-h3 ">Технокряк</h3>
+                    <p class="for-p ">Веб-сайт</p>
                 </li>
                 <li class="box">
-                    <img src="images/3.3.jpg " alt="Ресторан Seafood " class="images " />
-                    <figure>
-                        <h3 class="for-h3 ">Ресторан Seafood</h3>
-                        <p class="for-p ">Приложение</p>
-                    </figure>
+                    <img src="images/2.2.jpg " alt="Постер New Orlean vs Golden Star" width="370" height="294" />
+                    <h3 class="for-h3 ">Постер New Orlean vs Golden Star</h3>
+                    <p class="for-p ">Дизайн</p>
+                </li>
+                <li class="box">
+                    <img src="images/3.3.jpg " alt="Ресторан Seafood" width="370" height="294" />
+                    <h3 class="for-h3 ">Ресторан Seafood</h3>
+                    <p class="for-p ">Приложение</p>
                 </li>
             </ul>
             <ul class="images-box">
-                <li class="box ">
-                    <img src="images/4.4.jpg " alt="headphone " class="images " />
-                    <figure>
-                        <h3 class="for-h3 ">Проект Prime</h3>
-                        <p class="for-p ">Маркетинг</p>
-                    </figure>
+                <li class="box">
+                    <img src="images/4.4.jpg " alt="headphone" width="370" height="294" />
+                    <h3 class="for-h3 ">Проект Prime</h3>
+                    <p class="for-p ">Маркетинг</p>
                 </li>
                 <li class="box">
-                    <img src="images/5.5.jpg " alt="Boxes " class="images " />
-                    <figure>
-                        <h3 class="for-h3 ">Проект Boxes</h3>
-                        <p class="for-p ">Приложение</p>
-                    </figure>
+                    <img src="images/5.5.jpg " alt="Boxes" width="370" height="294" />
+                    <h3 class="for-h3 ">Проект Boxes</h3>
+                    <p class="for-p ">Приложение</p>
                 </li>
                 <li class="box">
-                    <img src="images/6.6.jpg " alt="Web site on the monitor " class="images " />
-                    <figure>
-                        <h3 class="for-h3 ">Inspiration has no Borders</h3>
-                        <p class="for-p "> Веб-сайт</p>
-                    </figure>
+                    <img src="images/6.6.jpg " alt="Web site on the monitor" width="370" height="294" />
+                    <h3 class="for-h3 ">Inspiration has no Borders</h3>
+                    <p class="for-p "> Веб-сайт</p>
             </ul>
             <ul class="images-box ">
                 </li>
                 <li class="box">
-                    <img src="images/7.7.jpg " alt="Megazine " class="images " />
-                    <figure>
-                        <h3 class="for-h3 ">Издание Limited Edition</h3>
-                        <p class="for-p ">Дизайн</p>
-                    </figure>
+                    <img src="images/7.7.jpg " alt="Megazine" width="370" height="294" />
+                    <h3 class="for-h3 ">Издание Limited Edition</h3>
+                    <p class="for-p ">Дизайн</p>
                 </li>
                 <li class="box">
-                    <img src="images/8.8.jpg " alt="tag " class="images " />
-                    <figure>
-                        <h3 class="for-h3 ">Проект LAB</h3>
-                        <p class="for-p ">Маркетинг</p>
-                    </figure>
+                    <img src="images/8.8.jpg " alt="tag" width="370" height="294" />
+                    <h3 class="for-h3 ">Проект LAB</h3>
+                    <p class="for-p ">Маркетинг</p>
                 </li>
                 <li class="box">
-                    <img src="images/9.9.jpg " alt="laptop " class="images " />
-                    <figure>
-                        <h3 class="for-h3 ">Growing Business</h3>
-                        <p class="for-p ">Приложение</p>
-                    </figure>
+                    <img src="images/9.9.jpg " alt="laptop" width="370" height="294" />
+                    <h3 class="for-h3 ">Growing Business</h3>
+                    <p class="for-p ">Приложение</p>
                 </li>
             </ul>
-
         </section>
     </main>
-    <footer class="footer ">
-        <a href=" " class="logo ">
-            <span class="web ">Web</span><span class="studio-2 ">Studio</span>
+    <footer>
+        <a href=" " class="logo-footer">
+            <span class="web ">Web</span><span class="studio-footer">Studio</span>
         </a>
-        <ul class="address ">
-            <li>
-                <address class="adres">г. Киев, пр-т Леси Украинки, 26</address>
-            </li>
-            <li>
-                <a href="mailto:info@example.com " class="mulo">info@example.com </a>
-            </li>
-            <li>
-                <a href="tel:+380991111111 " class="tel">+38 099 111 11 11</a>
-            </li>
-        </ul>
+        <address> 
+    <a href="" class="map-footer">г. Киев, пр-т Леси Украинки, 26</a>
+    <a href="mailto:info@example.com" class="mail-footer">info@example.com</a>
+    <a href="tel:+380991111111" class="tel-footer">+38 099 111 11 11</a>
+  </address>
     </footer>
 </body>
 
