--- a/index.html
+++ b/index.html
@@ -5,110 +5,115 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/styles.css">
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header>
-        <a href="">WebStudio</a>
-        <nav>
-            <ul>
-                <li><a href="">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
-            </ul>
-        </nav>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
-    </header>
-    <main>
-        <section>
-            <h1>
-                Эффективные решения <br /> для вашего бизнеса
-            </h1>
-            <button type="button">Заказать услугу</button>
-        </section>
-        <section>
-            <ul>
-                <li>
-                    <h3>Внимание к деталям</h3>
-                    <p>
-                        Идейные соображения, а также начало повседневной работы по формированию позиции.
-                    </p>
-                </li>
-                <li>
-                    <h3>Пунктуальность</h3>
-                    <p>
-                        Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-                    </p>
-                </li>
-                <li>
-                    <h3>Планирование</h3>
-                    <p>
-                        Равным образом консультация с широким активом в значительной степени обуславливает.
-                    </p>
-                </li>
-                <li>
-                    <h3>Современные технологии</h3>
-                    <p>
-                        Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-                    </p>
-                </li>
-            </ul>
-        </section>
-        <section>
-            <h2>Чем мы занимаемся</h2>
-            <ul>
-                <li>
-                    <img src="images/img.jpg" alt="Програмирование" width="370" height="294" />
-                </li>
-                <li>
-                    <img src="images/img(1).jpg" alt="Вид мобильного приложения" width="370" height="294" />
-                </li>
-                <li>
-                    <img src="images/img(2).jpg" alt="Цветовая гамма" width="370" height="294" />
-                </li>
-            </ul>
-        </section>
-        <section>
-            <h2>Наша команда</h2>
-            <ul>
-                <li>
-                    <img src="images/1.jpg" alt="Игорь Демьяненко" width="270" height="260" />
-                    <h3>Игорь Демьяненко</h3>
-                    <p>Product Designer</p>
-                </li>
-                <li>
-                    <img src="images/2.jpg" alt="Ольга Репина" width="270" height="260" />
-                    <h3>Ольга Репина</h3>
-                    <p>Frontend Developer</p>
-                </li>
-                <li>
-                    <img src="images/3.jpg" alt="Николай Тарасов" width="270" height="260" />
-                    <h3>Николай Тарасов</h3>
-                    <p>Marketing</p>
-                </li>
-                <li>
-                    <img src="images/4.jpg" alt="Михаил Ермаков" width="270" height="260" />
-                    <h3>Михаил Ермаков</h3>
-                    <p>UI Designer</p>
-                    <!-- Main ul -->
-                </li>
-            </ul>
-        </section>
-    </main>
-    <footer>
-        <a href="">WebStudio</a>
-        <address>
-        <ul>
-          <li><a href="">г. Киев, пр-т Леси Украинки, 26</a></li>
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
-        </ul>
+        <header class="header ">
+            <a href=" " class="logo ">
+                <span class="web ">Web</span><span class="studio ">Studio</span>
+            </a>
+            <nav>
+                <ul class="menu ">
+                    <li><a href="index.html " class="studia ">Студия</a></li>
+                    <li><a href="portfolio.html " class="portfolio ">Портфолио </a></li>
+                    <li><a href=" " class="contacts ">Контакты</a></li>
+                </ul>
+            </nav>
+            <a href="mailto:info@devstudio.com " class="mail ">info@devstudio.com</a>
+            <a href="tel:+380961111111 " class="phone">+38 096 111 11 11</a>
+        </header>
+        <main>
+            <section class="efect">
+                <h1 class="for-h1">
+                    Эффективные решения <br /> для вашего бизнеса
+                </h1>
+                <button type="button" class="order"><span class="text-button">Заказать услугу</span></button>
+            </section>
+            <section>
+                <ul class="items">
+                    <li class="block">
+                        <h3>Внимание к деталям</h3>
+                        <p>
+                            Идейные соображения, а также начало повседневной работы по формированию позиции.
+                        </p>
+                    </li>
+                    <li class="block">
+                        <h3>Пунктуальность</h3>
+                        <p>
+                            Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+                        </p>
+                    </li>
+                    <li class="block">
+                        <h3>Планирование</h3>
+                        <p>
+                            Равным образом консультация с широким активом в значительной степени обуславливает.
+                        </p>
+                    </li>
+                    <li class="block">
+                        <h3>Современные технологии</h3>
+                        <p>
+                            Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+                        </p>
+                    </li>
+                </ul>
+            </section>
+            <section>
+                <h2>Чем мы занимаемся</h2>
+                <ul class="images">
+                    <li>
+                        <img src="images/img.jpg" alt="Програмирование" width="370" height="294" />
+                    </li>
+                    <li>
+                        <img src="images/img (1).jpg" alt="Вид мобильного приложения" width="370" height="294" />
+                    </li>
+                    <li>
+                        <img src="images/img (2).jpg" alt="Цветовая гамма" width="370" height="294" />
+                    </li>
+                </ul>
+            </section>
+            <section class="dream-team">
+                <h2>Наша команда</h2>
+                <ul class="images">
+                    <li class="team">
+                        <img src="images/1.jpg" alt="Игорь Демьяненко" width="270" height="260" />
+                        <h3 class="full-name">Игорь Демьяненко</h3>
+                        <p class="position">Product Designer</p>
+                    </li>
+                    <li class="team">
+                        <img src="images/2.jpg" alt="Ольга Репина" width="270" height="260" />
+                        <h3 class="full-name">Ольга Репина</h3>
+                        <p class="position">Frontend Developer</p>
+                    </li>
+                    <li class="team">
+                        <img src="images/3.jpg" alt="Николай Тарасов" width="270" height="260" />
+                        <h3 class="full-name">Николай Тарасов</h3>
+                        <p class="position">Marketing</p>
+                    </li>
+                    <li class="team">
+                        <img src="images/4.jpg" alt="Михаил Ермаков" width="270" height="260" />
+                        <h3 class="full-name">Михаил Ермаков</h3>
+                        <p class="position">UI Designer</p>
+                        <!-- Main ul -->
+                    </li>
+                </ul>
+            </section>
+        </main>
+        <footer>
+            <a href=" " class="logo-footer">
+                <span class="web ">Web</span><span class="studio-footer">Studio</span>
+            </a>
+            <address> 
+        <a href="" class="map-footer">г. Киев, пр-т Леси Украинки, 26</a>
+        <a href="mailto:info@example.com" class="mail-footer">info@example.com</a>
+        <a href="tel:+380991111111" class="tel-footer">+38 099 111 11 11</a>
       </address>
-    </footer>
+        </footer>
 </body>
 
 </html>
