--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <header class="header ">
+        <header class="header-web">
             <a href=" " class="logo ">
                 <span class="web ">Web</span><span class="studio ">Studio</span>
             </a>
@@ -70,10 +70,10 @@
                         <img src="images/img.jpg" alt="Програмирование" width="370" height="294" />
                     </li>
                     <li>
-                        <img src="images/img (1).jpg" alt="Вид мобильного приложения" width="370" height="294" />
+                        <img src="images/img(1).jpg" alt="Вид мобильного приложения" width="370" height="294" />
                     </li>
                     <li>
-                        <img src="images/img (2).jpg" alt="Цветовая гамма" width="370" height="294" />
+                        <img src="images/img(2).jpg" alt="Цветовая гамма" width="370" height="294" />
                     </li>
                 </ul>
             </section>
@@ -104,6 +104,7 @@
                 </ul>
             </section>
         </main>
+
         <footer>
             <a href=" " class="logo-footer">
                 <span class="web ">Web</span><span class="studio-footer">Studio</span>
