--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/styles.css">
     <title>WebStudio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -37,33 +37,33 @@
         <section>
             <ul class="items">
                 <li class="block">
-                    <h3>Внимание к деталям</h3>
-                    <p>
+                    <h3 class="names">Внимание к деталям</h3>
+                    <p class="p-style">
                         Идейные соображения, а также начало повседневной работы по формированию позиции.
                     </p>
                 </li>
                 <li class="block">
-                    <h3>Пунктуальность</h3>
-                    <p>
+                    <h3 class="names">Пунктуальность</h3>
+                    <p class="p-style">
                         Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
                     </p>
                 </li>
                 <li class="block">
-                    <h3>Планирование</h3>
-                    <p>
+                    <h3 class="names">Планирование</h3>
+                    <p class="p-style">
                         Равным образом консультация с широким активом в значительной степени обуславливает.
                     </p>
                 </li>
                 <li class="block">
-                    <h3>Современные технологии</h3>
-                    <p>
+                    <h3 class="names">Современные технологии</h3>
+                    <p class="p-style">
                         Значимость этих проблем настолько очевидна, что реализация плановых заданий.
                     </p>
                 </li>
             </ul>
         </section>
         <section>
-            <h2>Чем мы занимаемся</h2>
+            <h2 class="h2-style">Чем мы занимаемся</h2>
             <ul class="images">
                 <li>
                     <img src="images/img.jpg" alt="Програмирование" width="370" height="294" />
@@ -77,7 +77,7 @@
             </ul>
         </section>
         <section class="dream-team">
-            <h2>Наша команда</h2>
+            <h2 class="h2-style">Наша команда</h2>
             <ul class="images">
                 <li class="team">
                     <img src="images/1.jpg" alt="Игорь Демьяненко" width="270" height="260" />
@@ -108,11 +108,11 @@
         <a href=" " class="logo-footer">
             <span class="web ">Web</span><span class="studio-footer">Studio</span>
         </a>
-        <address> 
-        <a href="" class="map-footer">г. Киев, пр-т Леси Украинки, 26</a>
-        <a href="mailto:info@example.com" class="mail-footer">info@example.com</a>
-        <a href="tel:+380991111111" class="tel-footer">+38 099 111 11 11</a>
-      </address>
+        <address>
+            <a href="" class="map-footer">г. Киев, пр-т Леси Украинки, 26</a>
+            <a href="mailto:info@example.com" class="mail-footer">info@example.com</a>
+            <a href="tel:+380991111111" class="tel-footer">+38 099 111 11 11</a>
+        </address>
     </footer>
 </body>
 
