--- a/portfolio.html
+++ b/portfolio.html
@@ -7,10 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css" />
 </head>
 
 <body>
@@ -29,7 +29,7 @@
         <a href="tel:+380961111111 " class="phone-portfolio">+38 096 111 11 11</a>
     </header>
 
-    <main>
+    <section>
         <section>
             <ul class="buttons">
                 <li><button type="button " class="all "><span class="text-for-all"> Все</span></button></li>
@@ -43,56 +43,56 @@
             <ul class="images-box ">
                 <li class="box">
                     <img src="images/1.1.jpg " alt="Технокряк" width="370" height="294" />
-                    <h3 class="for-h3 ">Технокряк</h3>
+                    <h2 class="for-h2">Технокряк</h2>
                     <p class="for-p ">Веб-сайт</p>
                 </li>
                 <li class="box">
                     <img src="images/2.2.jpg " alt="Постер New Orlean vs Golden Star" width="370" height="294" />
-                    <h3 class="for-h3 ">Постер New Orlean vs Golden Star</h3>
+                    <h2 class="for-h2">Постер New Orlean vs Golden Star</h2>
                     <p class="for-p ">Дизайн</p>
                 </li>
                 <li class="box">
                     <img src="images/3.3.jpg " alt="Ресторан Seafood" width="370" height="294" />
-                    <h3 class="for-h3 ">Ресторан Seafood</h3>
+                    <h2 class="for-h2">Ресторан Seafood</h2>
                     <p class="for-p ">Приложение</p>
                 </li>
             </ul>
             <ul class="images-box">
                 <li class="box">
                     <img src="images/4.4.jpg " alt="headphone" width="370" height="294" />
-                    <h3 class="for-h3 ">Проект Prime</h3>
+                    <h2 class="for-h2">Проект Prime</h2>
                     <p class="for-p ">Маркетинг</p>
                 </li>
                 <li class="box">
                     <img src="images/5.5.jpg " alt="Boxes" width="370" height="294" />
-                    <h3 class="for-h3 ">Проект Boxes</h3>
+                    <h2 class="for-h2">Проект Boxes</h2>
                     <p class="for-p ">Приложение</p>
                 </li>
                 <li class="box">
                     <img src="images/6.6.jpg " alt="Web site on the monitor" width="370" height="294" />
-                    <h3 class="for-h3 ">Inspiration has no Borders</h3>
+                    <h2 class="for-h2">Inspiration has no Borders</h2>
                     <p class="for-p "> Веб-сайт</p>
             </ul>
             <ul class="images-box ">
                 </li>
                 <li class="box">
                     <img src="images/7.7.jpg " alt="Megazine" width="370" height="294" />
-                    <h3 class="for-h3 ">Издание Limited Edition</h3>
+                    <h2 class="for-h2">Издание Limited Edition</h2>
                     <p class="for-p ">Дизайн</p>
                 </li>
                 <li class="box">
                     <img src="images/8.8.jpg " alt="tag" width="370" height="294" />
-                    <h3 class="for-h3 ">Проект LAB</h3>
+                    <h2 class="for-h2">Проект LAB</h2>
                     <p class="for-p ">Маркетинг</p>
                 </li>
                 <li class="box">
                     <img src="images/9.9.jpg " alt="laptop" width="370" height="294" />
-                    <h3 class="for-h3 ">Growing Business</h3>
+                    <h2 class="for-h2">Growing Business</h2>
                     <p class="for-p ">Приложение</p>
                 </li>
             </ul>
         </section>
-    </main>
+    </section>
 
     <footer>
         <a href=" " class="logo-footer">
