--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 
 <body>
     <header class="header-web">
-        <a href=" " class="logo ">
+        <a href=" " class="logo link-for-footer">
             <span class="web ">Web</span><span class="studio ">Studio</span>
         </a>
         <nav>
             <ul class="menu ">
-                <li><a href="index.html " class="studia ">Студия</a></li>
-                <li><a href="portfolio.html " class="portfolio ">Портфолио </a></li>
-                <li><a href=" " class="contacts ">Контакты</a></li>
+                <li><a href="index.html " class="studia link-for-footer">Студия</a></li>
+                <li><a href="portfolio.html " class="portfolio link-for-footer">Портфолио </a></li>
+                <li><a href=" " class="contacts link-for-footer">Контакты</a></li>
             </ul>
         </nav>
-        <a href="mailto:info@devstudio.com " class="mail ">info@devstudio.com</a>
-        <a href="tel:+380961111111 " class="phone">+38 096 111 11 11</a>
+        <a href="mailto:info@devstudio.com " class="mail link-for-footer">info@devstudio.com</a>
+        <a href="tel:+380961111111 " class="phone link-for-footer">+38 096 111 11 11</a>
     </header>
     <main>
         <section class="efect">
@@ -66,13 +66,13 @@
             <h2 class="h2-style">Чем мы занимаемся</h2>
             <ul class="images">
                 <li>
-                    <img src="images/img.jpg" alt="Програмирование" width="370" height="294" />
+                    <img src="images/img.jpg" alt="Програмирование" class="images-items" width="370" height="294" />
                 </li>
                 <li>
-                    <img src="images/img(1).jpg" alt="Вид мобильного приложения" width="370" height="294" />
+                    <img src="images/img(1).jpg" alt="Вид мобильного приложения" class="images-items" width="370" height="294" />
                 </li>
                 <li>
-                    <img src="images/img(2).jpg" alt="Цветовая гамма" width="370" height="294" />
+                    <img src="images/img(2).jpg" alt="Цветовая гамма" class="images-items" width="370" height="294" />
                 </li>
             </ul>
         </section>
@@ -105,13 +105,13 @@
     </main>
 
     <footer>
-        <a href=" " class="logo-footer">
+        <a href=" " class="logo-footer link-for-footer">
             <span class="web ">Web</span><span class="studio-footer">Studio</span>
         </a>
         <address>
-            <a href="" class="map-footer">г. Киев, пр-т Леси Украинки, 26</a>
-            <a href="mailto:info@example.com" class="mail-footer">info@example.com</a>
-            <a href="tel:+380991111111" class="tel-footer">+38 099 111 11 11</a>
+            <a href="" class="map-footer link-for-footer">г. Киев, пр-т Леси Украинки, 26</a>
+            <a href="mailto:info@example.com " class="mail-footer link-for-footer">info@example.com</a>
+            <a href="tel:+380991111111" class="tel-footer link-for-footer">+38 099 111 11 11</a>
         </address>
     </footer>
 </body>
